--- a/front/src/App.css
+++ b/front/src/App.css
@@ -375,6 +375,20 @@ table th {
 .navbar .welcome span {
   margin-right: 0.6rem;
 }
+.item-enter {
+  opacity: 0;
+}
+.item-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+.item-exit {
+  opacity: 1;
+}
+.item-exit-active {
+  opacity: 0;
+  transition: opacity 500ms ease-in;
+}
 
 /* Mobile Styles */
 @media (max-width: 700px) {
